--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,18 @@ android.enableJetifier=false
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
+# Options for AGP 9.0.0
+android.defaults.buildfeatures.resvalues=true
+android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
+android.enableAppCompileTimeRClass=false
+android.usesSdkInManifest.disallowed=false
+android.uniquePackageNames=false
+android.dependency.useConstraints=true
+android.r8.strictFullModeForKeepRules=false
+android.r8.optimizedResourceShrinking=false
+android.builtInKotlin=false
+android.newDsl=false
+
 # ProGuard/R8
 # android.enableR8=true
 
