--- a/gradle.properties
+++ b/gradle.properties
@@ -41,7 +41,7 @@ android.uniquePackageNames=false
 android.dependency.useConstraints=true
 android.r8.strictFullModeForKeepRules=false
 android.r8.optimizedResourceShrinking=false
-android.builtInKotlin=false
+android.builtInKotlin=true
 android.newDsl=false
 
 # ProGuard/R8
