--- a/gradle.properties
+++ b/gradle.properties
@@ -32,17 +32,19 @@ android.enableJetifier=false
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
-# Options for AGP 9.0.0
+# Non-default options for AGP 9.0.0
 android.defaults.buildfeatures.resvalues=true
 android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
 android.enableAppCompileTimeRClass=false
-android.usesSdkInManifest.disallowed=false
 android.uniquePackageNames=false
 android.dependency.useConstraints=true
 android.r8.strictFullModeForKeepRules=false
 android.r8.optimizedResourceShrinking=false
-android.builtInKotlin=true
 android.newDsl=false
+
+# Explicit default Options in AGP 9.0.0
+android.builtInKotlin=true
+android.usesSdkInManifest.disallowed=true
 
 # ProGuard/R8
 # android.enableR8=true
