--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,6 @@ android.nonFinalResIds=false
 android.defaults.buildfeatures.resvalues=true
 android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
 android.enableAppCompileTimeRClass=false
-android.uniquePackageNames=false
 android.dependency.useConstraints=true
 android.r8.strictFullModeForKeepRules=false
 android.r8.optimizedResourceShrinking=false
@@ -45,6 +44,7 @@ android.newDsl=false
 # Explicit default Options in AGP 9.0.0
 android.builtInKotlin=true
 android.usesSdkInManifest.disallowed=true
+android.uniquePackageNames=true
 
 # ProGuard/R8
 # android.enableR8=true
