android.dependency.useConstraints=false

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,6 @@ android.nonFinalResIds=false
 # Non-default options for AGP 9.0.0
 android.defaults.buildfeatures.resvalues=true
 android.enableAppCompileTimeRClass=false
-android.dependency.useConstraints=true
 android.r8.strictFullModeForKeepRules=false
 android.r8.optimizedResourceShrinking=false
 android.newDsl=false
@@ -43,6 +42,7 @@ android.newDsl=false
 # Explicit default Options in AGP 9.0.0
 android.builtInKotlin=true
 android.sdk.defaultTargetSdkToCompileSdkIfUnset=true
+android.dependency.useConstraints=false
 android.usesSdkInManifest.disallowed=true
 android.uniquePackageNames=true
 
