--- a/gradle.properties
+++ b/gradle.properties
@@ -33,9 +33,6 @@ android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
 # Non-default options for AGP 9.0.0
-android.defaults.buildfeatures.resvalues=true
-android.r8.strictFullModeForKeepRules=false
-android.r8.optimizedResourceShrinking=false
 android.newDsl=false
 
 # Explicit default Options in AGP 9.0.0
@@ -45,6 +42,9 @@ android.enableAppCompileTimeRClass=true
 android.dependency.useConstraints=false
 android.usesSdkInManifest.disallowed=true
 android.uniquePackageNames=true
+android.defaults.buildfeatures.resvalues=false
+android.r8.strictFullModeForKeepRules=true
+android.r8.optimizedResourceShrinking=true
 
 # ProGuard/R8
 # android.enableR8=true
