--- a/gradle.properties
+++ b/gradle.properties
@@ -33,9 +33,9 @@ android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
 # Non-default options for AGP 9.0.0
-android.newDsl=false
 
 # Explicit default Options in AGP 9.0.0
+android.newDsl=true
 android.builtInKotlin=true
 android.sdk.defaultTargetSdkToCompileSdkIfUnset=true
 android.enableAppCompileTimeRClass=true
