--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ android.enableJetifier=false
 
 # Resources
 android.nonTransitiveRClass=false
-android.nonFinalResIds=false
+android.nonFinalResIds=true
 
 # Non-default options for AGP 9.0.0
 
