--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -80,5 +80,5 @@ espresso-contrib = { group = "androidx.test.espresso", name = "espresso-contrib"
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
-kotlinAndroid = { id = "org.jetbrains.kotlin.android", version = "2.2.0" }
+kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "google-services" }
